RESOLVE: padding issue on mobile view

--- a/src/Components/Topics/Topics.module.scss
+++ b/src/Components/Topics/Topics.module.scss
@@ -1,7 +1,6 @@
 .container {
   height: 100vh;
-  width: 100vw;
-  max-width: 100%;
+  width: 100%;
 
   .arrow {
     cursor: pointer;
@@ -41,6 +40,9 @@
     flex-wrap: wrap;
     width: 97vw;
     margin: auto;
+    padding-top: 3.8rem;
+    overflow-y: auto;
+    height: auto;
 
     .boxes {
       width: 45%;
